--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -1,8 +1,8 @@
-@mixin bordered($size, $color) {  
+@mixin bordered($size:2px, $color:#111111) {  
     border: $size solid $color;
 }
 
-@mixin  font($fs, $fw, $lh, $ls) {
+@mixin font($fs:14px, $fw:400, $lh:1.71, $ls:0.03em) {
     font-size: $fs;
     font-weight: $fw;
     line-height: $lh;
