--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,4 @@
-.hero__button,
- &:hover,
- &:focus{
+.hero__button {
     @extend %button;
     @extend %button-size;
     @include font(16px, 700, 1.88, 0.06em);
@@ -10,12 +8,24 @@
     display: block;
     padding-top: 10px;
     padding-bottom: 10px;
-    padding-left: 32px;
-    padding-right: 32px;
     margin: 0 0 0 485px;
+
+    &:hover,
+    &:focus {
+    @extend %button;
+    @extend %button-size;
+    @include font(16px, 700, 1.88, 0.06em);
+    font-family: inherit;
+    color: var(--primary-white-color);
+    background-color:var(--accent-color);
+    display: block;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin: 0 0 0 485px;
+    }
 }
 
-.modal__button{
+.modal__button {
     @extend %button;
     @extend %button-size;
     @extend %align-list;
@@ -28,7 +38,7 @@
     outline: none;
 }
 
-.subscribe__button{
+.subscribe__button {
     @extend %button;
     @extend %button-size;
     @include font(16px, 700, 1.88, 0.06em);
@@ -42,7 +52,7 @@
     padding: 10px 28px 10px 29px;
 }
 
-.portfolio-menu__button{
+.portfolio-menu__button {
     @extend %button;
     @include font(16px, 500, 1.63, 0.06em);
     padding: 6px 22px;
@@ -57,7 +67,7 @@
     @extend %transition;
 
     &:hover,
-    &:focus{
+    &:focus {
     color: var(--primary-white-color);
     background-color:var(--accent-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
