--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,4 +1,4 @@
-.header{
+.header {
     max-width: 1600px;
     margin: auto;
     border-bottom: 1px solid #ECECEC;
@@ -6,7 +6,7 @@
     align-items: center;
 }
 
-.section__hero{
+.section__hero {
     text-align: center;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
     background-repeat: no-repeat;
@@ -18,26 +18,28 @@
     min-height: 600px;
 }
 
-.section{
+.section {
     padding: 94px 0 94px 0;
 }
 
-.section--without-padding-top{
+.section--without-padding-top {
     padding-top: 0;
 }
 
-.section__title{
+.section__title {
     @include font(36px, 700, 1.17, 0.03em);
     text-align: center;
     color:var(--title-text-color);
     margin-bottom: 50px;
 }
 
-.section--dark-background{
+.section--dark-background {
+    max-width: 1600px;
+    margin: 0 auto;
     background-color: var(--button-backgroung-color);
 }
 
-.section__footer{
+.section__footer {
     background-color: var(--hero-background-color);
     padding: 60px 0;
     max-width: 1600px;
