--- a/sass/components/_body.scss
+++ b/sass/components/_body.scss
@@ -1,6 +1,6 @@
 body {
     font-family: Roboto,sans-serif;
-    @include font(14px, 400, 1.71, 0.03em);
+    @include font(14px, normal, 1.71, 0.03em);
     color: var(--primary-text-color);
     background: var(--main-background-color);
 }
