--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -2,7 +2,7 @@
     display: flex;
 }
 
-.features__icon {
+.features__box {
     @extend %align-list;
     height: 120px;
     margin-bottom: 30px;
@@ -15,7 +15,7 @@
     margin-left: 30px;
 
     &:first-child {
-    margin-left: 0px; 
+        margin-left: 0px; 
     }
 }
 
