--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,11 @@
+.header {
+    max-width: 1600px;
+    margin: auto;
+    border-bottom: 1px solid #ECECEC;
+    display: flex;
+    align-items: center;
+}
+
 .logo {
     @include font(26px, 700, 1.19, 0.03em);
     font-family: Raleway,sans-serif;
@@ -20,7 +28,7 @@
     margin-right: 50px;
 
     &:last-child {
-    margin-right: 0;
+        margin-right: 0;
     }
 }
 
@@ -30,6 +38,8 @@
     display: block;
     text-decoration: none;
     list-style: none;
+    padding-top: 32px;
+    padding-bottom: 32px;
     color: var(--title-text-color);
     transition-property: color;
     @extend %transition;
@@ -37,27 +47,22 @@
     &:hover,
     &:focus,
     &:active {
-    color:var(--accent-color);
+        color:var(--accent-color);
     }
-}
-
-.site-nav .site-nav__link {
-    padding-top: 32px;
-    padding-bottom: 32px;
 }
 
 .site-nav__link--current {
     color: var(--accent-color);
 
     &::after {
-    position: absolute;
-    display: block;
-    content: "";
-    width: 100%;
-    height: 4px;
-    bottom: -1px;
-    background-color: #2196f3;
-    border-radius: 2px;
+        position: absolute;
+        display: block;
+        content: "";
+        width: 100%;
+        height: 4px;
+        bottom: -1px;
+        background-color: #2196f3;
+        border-radius: 2px;
     }
 }
 
@@ -68,6 +73,10 @@
     margin-left: auto;
 }
 
+.contacts__item + & {
+    margin-left: 50px;
+}
+
 .contacts__link {
     @include font(14px, 500, 1.14, 0.02em);
     text-decoration: none;
@@ -76,22 +85,15 @@
     display: flex;
     align-items: center;
     color: var(--primary-text-color);
+    padding-top: 32px;
+    padding-bottom: 32px;
     transition-property: color;
     @extend %transition;
 
     &:hover,
     &:focus {
-    color: var(--accent-color);
+        color: var(--accent-color);
     }
-}
-
-.contacts .contacts__link {
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
-
-.contacts .contacts__item + .contacts__item {
-    margin-left: 50px;
 }
 
 .contacts__icon {
