--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,3 +1,15 @@
+.hero {
+    text-align: center;
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 200px 0;
+    margin: 0 auto;
+    max-width: 1600px;
+    min-height: 600px;
+}
+
 .hero__title {
     @include font(44px, 900, 1.36, 0.06em);
     text-transform: uppercase;
@@ -7,6 +19,6 @@
     height: 120px;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 0;
     margin-bottom: 30px;
-    margin-top: 106px;
 }
