--- a/sass/layout/_regular-customers.scss
+++ b/sass/layout/_regular-customers.scss
@@ -1,8 +1,3 @@
-.regular-customers__title {
-    @include font(36px, 700, 1.17, 0.03em);
-    text-align: center;
-    color: var(--title-text-color);
-}
 .regular-customers {
     @extend %align-list;
     margin-top: 50px;
@@ -12,21 +7,10 @@
     @extend %align-list;
     width: 170px;
     height: 92px;
-    @include bordered(1px, #AFB1B8);
-    box-sizing: border-box;
-    border-radius: 4px;
-    cursor: pointer;
-    transition-property: border-color;
-    @extend %transition;
-
-    &:hover,
-    &:focus {
-    border-color: var(--accent-color);
-    }
 
     &:not(:last-child) {
-    margin-right: 30px;
-    }
+        margin-right: 30px;
+        }
 }
 
 .regular-customers__link {
@@ -34,13 +18,18 @@
     width: 100%;
     height: 100%;
     color: var(--main-icon-color);
-    transition-property: color;
+    @include bordered(1px, #AFB1B8);
+    box-sizing: border-box;
+    border-radius: 4px;
+    cursor: pointer;
+    transition-property: color, border-color;
     @extend %transition;
 
     &:hover,
     &:focus {
-    color: var(--accent-color);
-    }
+        color: var(--accent-color);
+        border-color: var(--accent-color);
+    }    
 }
 
 .regular-customers__icon {
