--- a/sass/portfolio/_portfolio.scss
+++ b/sass/portfolio/_portfolio.scss
@@ -8,11 +8,11 @@
     margin-bottom: 30px;
 
     &:nth-child(3n) {
-    margin-right: 0;
+        margin-right: 0;
     }
 
     &:nth-child(n+7) {
-    margin-bottom: 0;
+        margin-bottom: 0;
     }
 }
 
@@ -29,8 +29,8 @@
     @extend %transition;
 
     &:hover,
-    &focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
     }
 }
 
@@ -53,9 +53,10 @@
     transform: translateY(100%);
     transition-property: transform;
     @extend %transition;
+
     .portfolio__link:hover &,
     .portfolio__link:focus & {
-    transform: translateY(0);
+        transform: translateY(0);
     }
 }
 
