--- a/css/main.css
+++ b/css/main.css
@@ -177,6 +177,12 @@ body {
   padding-top: 0;
 }
 
+.section--dark-background {
+  max-width: 1600px;
+  margin: 0 auto;
+  background-color: var(--button-backgroung-color);
+}
+
 .section__title {
   font-size: 36px;
   font-weight: 700;
@@ -185,12 +191,6 @@ body {
   text-align: center;
   color: var(--title-text-color);
   margin-bottom: 50px;
-}
-
-.section--dark-background {
-  max-width: 1600px;
-  margin: 0 auto;
-  background-color: var(--button-backgroung-color);
 }
 
 .backdrop {
@@ -258,11 +258,6 @@ body {
   margin: auto;
 }
 
-.footer__box {
-  display: flex;
-  align-items: baseline;
-}
-
 .footer-contacts {
   flex-grow: 1;
 }
@@ -281,6 +276,11 @@ body {
   color: var(--primary-white-color);
 }
 
+.footer__box {
+  display: flex;
+  align-items: baseline;
+}
+
 .footer__item:not(:last-child) {
   margin-bottom: 9px;
 }
@@ -296,7 +296,7 @@ body {
   transition-property: color;
 }
 
-.footer__link :hover, .footer__link:focus {
+.footer__link:hover, .footer__link:focus {
   color: var(--accent-color);
 }
 
@@ -416,6 +416,10 @@ body {
   margin-left: auto;
 }
 
+contacts__item + .contacts__item {
+  margin-left: 50px;
+}
+
 .contacts__link {
   font-size: 14px;
   font-weight: 500;
@@ -427,20 +431,13 @@ body {
   display: flex;
   align-items: center;
   color: var(--primary-text-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
   transition-property: color;
 }
 
 .contacts__link:hover, .contacts__link:focus {
   color: var(--accent-color);
-}
-
-.contacts .contacts__link {
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.contacts .contacts__item + .contacts__item {
-  margin-left: 50px;
 }
 
 .contacts__icon {
@@ -472,8 +469,8 @@ body {
   height: 120px;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 0;
   margin-bottom: 30px;
-  margin-top: 106px;
 }
 
 .modal-window {
@@ -759,6 +756,10 @@ body {
   height: 92px;
 }
 
+.regular-customers__item:not(:last-child) {
+  margin-right: 30px;
+}
+
 .regular-customers__link {
   width: 100%;
   height: 100%;
@@ -773,10 +774,6 @@ body {
 .regular-customers__link:hover, .regular-customers__link:focus {
   color: var(--accent-color);
   border-color: var(--accent-color);
-}
-
-.regular-customers__link:not(:last-child) {
-  margin-right: 30px;
 }
 
 .regular-customers__icon {
@@ -875,7 +872,7 @@ body {
   transition-property: box-shadow;
 }
 
-.portfolio__link:hover, .portfolio__linkfocus {
+.portfolio__link:hover, .portfolio__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
