--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -73,8 +73,10 @@
     margin-left: auto;
 }
 
-.contacts__item + & {
+.contacts__item {
+    contacts__item + & {
     margin-left: 50px;
+    }
 }
 
 .contacts__link {
