--- a/css/main.css
+++ b/css/main.css
@@ -416,7 +416,7 @@ body {
   margin-left: auto;
 }
 
-contacts__item + .contacts__item {
+.contacts__item + .contacts__item {
   margin-left: 50px;
 }
 
